--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.29-Alpha,</span>
+<span id="revnumber">versione 0.7.30-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -677,6 +677,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_verbi_sfusi">Verbi Sfusi</a>
 <ul class="sectlevel3">
+<li><a href="#_acchiappa">acchiappa</a></li>
 <li><a href="#_aspetta">aspetta</a></li>
 <li><a href="#_attraversa">attraversa</a></li>
 <li><a href="#_bacia">bacia</a></li>
@@ -979,6 +980,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>acchiappa</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">acchiappa (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3352,6 +3362,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <div class="ulist">
 <ul>
 <li>
+<p><code>acchiappa</code></p>
+</li>
+<li>
 <p><code>aspetta</code></p>
 </li>
 <li>
@@ -3412,6 +3425,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>vai_a</code></p>
 </li>
 </ul>
+</div>
+<div class="sect3">
+<h4 id="_acchiappa"><a class="anchor" href="#_acchiappa"></a>acchiappa</h4>
+
 </div>
 <div class="sect3">
 <h4 id="_aspetta"><a class="anchor" href="#_aspetta"></a>aspetta</h4>
@@ -3545,13 +3562,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">about</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>catch</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">catch (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>clean</code></p></td>
@@ -4054,6 +4064,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>pensa_a</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>acchiappa</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>aspetta</code>.</p>
 </li>
 <li>
@@ -4121,7 +4134,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.29-Alpha<br>
+Versione 0.7.30-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
