--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.17-Alpha,</span>
-<span id="revdate">2018-11-09</span>
+<span id="revnumber">versione 0.7.18-Alpha,</span>
+<span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -504,6 +504,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN abbandonare_partita.      ---&gt; 'quit'
   CAN accendere.                ---&gt; turn_on
+  CAN acchiappare.              ---&gt; catch
   CAN alzarsi.                  ---&gt; stand (up)
   CAN andare_a.                 ---&gt; go_to
   CAN annusare.                 ---&gt; smell
@@ -736,7 +737,6 @@ italiano del modulo delle definizioni.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN about.
-  CAN catch.
   CAN climb.
   CAN climb_on.
   CAN 'exit'.
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.17-Alpha<br>
+Versione 0.7.18-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
