--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.30-Alpha,</span>
+<span id="revnumber">versione 0.7.31-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -687,6 +687,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_dormi">dormi</a></li>
 <li><a href="#_gioca_con">gioca_con</a></li>
 <li><a href="#_gratta">gratta</a></li>
+<li><a href="#_grida">grida</a></li>
 <li><a href="#_guida">guida</a></li>
 <li><a href="#_inventario">inventario</a></li>
 <li><a href="#_lega">lega</a></li>
@@ -1295,6 +1296,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>grida</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">strilla, urla</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">grida</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3392,6 +3402,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>gratta</code></p>
 </li>
 <li>
+<p><code>grida</code></p>
+</li>
+<li>
 <p><code>guida</code></p>
 </li>
 <li>
@@ -3464,6 +3477,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_gratta"><a class="anchor" href="#_gratta"></a>gratta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_grida"><a class="anchor" href="#_grida"></a>grida</h4>
 
 </div>
 <div class="sect3">
@@ -3687,13 +3704,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">shoot (target) with (weapon)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>shout</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">scream, yell</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">shout</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -4094,6 +4104,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>gratta</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>grida</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>guida</code>.</p>
 </li>
 <li>
@@ -4134,7 +4147,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.30-Alpha<br>
+Versione 0.7.31-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
