Verb 'Turn' ('Gira')

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.18-Alpha,</span>
+<span id="revnumber">versione 0.7.19-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -546,6 +546,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN entrare.                  ---&gt; enter
   CAN esaminare.                ---&gt; examine      (+ check, inspect, observe, x)
   CAN giocare_con.              ---&gt; play_with
+  CAN girare.                   ---&gt; turn (+ rotate)
   CAN grattare.                 ---&gt; scratch
   CAN gridare.                  ---&gt; shout        (+ scream, yell)
   CAN guardare.                 ---&gt; look         (+ gaze, peek)
@@ -761,8 +762,7 @@ italiano del modulo delle definizioni.</p>
   CAN stand_on.
 --CAN switch. --------------------&gt; ** VERBO ELIMINATO **
 --CAN switch_on. -----------------&gt; ** VERBO ELIMINATO **
---CAN switch_off. ----------------&gt; ** VERBO ELIMINATO **
-  CAN turn.        -- (+ rotate)</code></pre>
+--CAN switch_off. ----------------&gt; ** VERBO ELIMINATO **</code></pre>
 </div>
 </div>
 </div>
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.18-Alpha<br>
+Versione 0.7.19-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
