--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.31-Alpha,</span>
+<span id="revnumber">versione 0.7.32-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -686,6 +686,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_consulta">consulta</a></li>
 <li><a href="#_dormi">dormi</a></li>
 <li><a href="#_gioca_con">gioca_con</a></li>
+<li><a href="#_gira">gira</a></li>
 <li><a href="#_gratta">gratta</a></li>
 <li><a href="#_grida">grida</a></li>
 <li><a href="#_guida">guida</a></li>
@@ -1284,6 +1285,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>gioca_con</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">gioca con (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gira</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">gira (ogg)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
@@ -3399,6 +3409,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>gioca_con</code></p>
 </li>
 <li>
+<p><code>gira</code></p>
+</li>
+<li>
 <p><code>gratta</code></p>
 </li>
 <li>
@@ -3473,6 +3486,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_gioca_con"><a class="anchor" href="#_gioca_con"></a>gioca_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_gira"><a class="anchor" href="#_gira"></a>gira</h4>
 
 </div>
 <div class="sect3">
@@ -3726,13 +3743,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">stand on (surface)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>turn</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">rotate</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">turn (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 </tbody>
 </table>
@@ -4101,6 +4111,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>gioca_con</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>gira</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>gratta</code>.</p>
 </li>
 <li>
@@ -4147,7 +4160,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.31-Alpha<br>
+Versione 0.7.32-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
