--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.32-Alpha,</span>
+<span id="revnumber">versione 0.7.33-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -673,6 +673,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel3">
 <li><a href="#_pensa">pensa</a></li>
 <li><a href="#_pensa_a">pensa_a</a></li>
+</ul>
+</li>
+<li><a href="#_entrare_e_uscire">Entrare e Uscire</a>
+<ul class="sectlevel3">
+<li><a href="#_entra_entra_in">entra + entra_in</a></li>
+<li><a href="#_esci_esci_da">esci + esci_da</a></li>
 </ul>
 </li>
 <li><a href="#_verbi_sfusi">Verbi Sfusi</a>
@@ -1273,9 +1279,45 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>entra</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">entra</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>entra_in</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">entra in (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>esamina</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">guarda, descrivi, osserva, X</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">esamina (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>esci</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">esci</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>esci_da</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">esci da (ogg)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
@@ -3374,6 +3416,36 @@ a calci, colpire e simili:</p>
 </div>
 </div>
 <div class="sect2">
+<h3 id="_entrare_e_uscire"><a class="anchor" href="#_entrare_e_uscire"></a>Entrare e Uscire</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per entrare e uscire:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>entra</code></p>
+</li>
+<li>
+<p><code>entra_in</code></p>
+</li>
+<li>
+<p><code>esci</code></p>
+</li>
+<li>
+<p><code>esci_da</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_entra_entra_in"><a class="anchor" href="#_entra_entra_in"></a>entra + entra_in</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_esci_esci_da"><a class="anchor" href="#_esci_esci_da"></a>esci + esci_da</h4>
+
+</div>
+</div>
+<div class="sect2">
 <h3 id="_verbi_sfusi"><a class="anchor" href="#_verbi_sfusi"></a>Verbi Sfusi</h3>
 <div class="paragraph">
 <p>Questo gruppo raccoglie i verbi per i quali non è ancora stato creato un:
@@ -3617,20 +3689,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">climb on (surface)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>enter</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">enter (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>exit</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">exit (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>fire</code></p></td>
@@ -4084,6 +4142,12 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>pensa_a</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>entra</code> + <code>entra_in</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>esci</code> + <code>esci_da</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>acchiappa</code>.</p>
 </li>
 <li>
@@ -4160,7 +4224,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.32-Alpha<br>
+Versione 0.7.33-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
