--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.19-Alpha,</span>
+<span id="revnumber">versione 0.7.20-Alpha,</span>
 <span id="revdate">2018-11-10</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -646,6 +646,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN uccidere_con.             ---&gt; kill_with
   CAN usare.                    ---&gt; 'use'
   CAN usare_con.                ---&gt; use_with
+  CAN uscire.                   ---&gt; 'exit'
   CAN vedere_punteggio.         ---&gt; 'score'
   CAN vendere.                  ---&gt; sell
   CAN versare.                  ---&gt; pour
@@ -740,7 +741,6 @@ italiano del modulo delle definizioni.</p>
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN about.
   CAN climb.
   CAN climb_on.
-  CAN 'exit'.
 --CAN extinguish. ----------------&gt; ** VERBO ELIMINATO **  (+ put out, quench)
   CAN fire.
   CAN fire_at.
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.19-Alpha<br>
+Versione 0.7.20-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
