Knock + Lift + Follow
Translate verbs:
- `knock`       to `bussa`
- `knock_error` to `bussa_errore`
- `lift`        to `solleva`
- `follow`      to `segui`

Translate verb restriction attributes:
- `lift` to `sollevare`

Translate verb response attributes:
- `check_obj_weight_sg`/`pl` to `ogg1_troppo_pesante_sg`/`pl`

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -757,7 +757,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>21700</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_spingere</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">== Spingere e Tirare</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Spingere, Tirare e Sollevare</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>21800</code></p></td>
