--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.21-Alpha,</span>
+<span id="revnumber">versione 0.7.22-Alpha,</span>
 <span id="revdate">2018-11-11</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -620,6 +620,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN sedersi.                  ---&gt; sit (down)
   CAN sedersi_su.               ---&gt; sit_on
   CAN seguire.                  ---&gt; follow
+  CAN sollevare.                ---&gt; lift
   CAN sorseggiare.              ---&gt; sip
   CAN sparare.                  ---&gt; fire
   CAN sparare_a.                ---&gt; fire_at
@@ -746,7 +747,6 @@ italiano del modulo delle definizioni.</p>
 --CAN extinguish. ----------------&gt; ** VERBO ELIMINATO **  (+ put out, quench)
 --CAN get_up. --------------------&gt; ** VERBO ELIMINATO **
   CAN hint.        -- (+ hints)
-  CAN lift.
 --CAN light. ---------------------&gt; ** VERBO ELIMINATO **
 --CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
   CAN pry.
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.21-Alpha<br>
+Versione 0.7.22-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
