--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.34-Alpha,</span>
+<span id="revnumber">versione 0.7.35-Alpha,</span>
 <span id="revdate">2018-11-11</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -635,8 +635,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_tuffati_in">tuffati_in</a></li>
 </ul>
 </li>
-<li><a href="#_spingere_e_tirare">Spingere e Tirare</a>
+<li><a href="#_spingere_tirare_e_sollevare">Spingere, Tirare e Sollevare</a>
 <ul class="sectlevel3">
+<li><a href="#_solleva">solleva</a></li>
 <li><a href="#_spingi">spingi</a></li>
 <li><a href="#_spingi_con">spingi_con</a></li>
 <li><a href="#_tira">tira</a></li>
@@ -696,6 +697,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_attraversa">attraversa</a></li>
 <li><a href="#_bacia">bacia</a></li>
 <li><a href="#_balla">balla</a></li>
+<li><a href="#_bussa">bussa</a></li>
 <li><a href="#_canta">canta</a></li>
 <li><a href="#_consulta">consulta</a></li>
 <li><a href="#_dormi">dormi</a></li>
@@ -711,6 +713,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_prega">prega</a></li>
 <li><a href="#_rifai">rifai</a></li>
 <li><a href="#_scava">scava</a></li>
+<li><a href="#_segui">segui</a></li>
 <li><a href="#_suona">suona</a></li>
 <li><a href="#_trova">trova</a></li>
 <li><a href="#_vai_a">vai_a</a></li>
@@ -1176,6 +1179,24 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>bussa</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">bussa (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>bussa_errore</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">bussa</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -1872,6 +1893,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>segui</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">segui (png)!</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>siediti</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">siedi</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">siediti</p></td>
@@ -1887,6 +1917,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>solleva</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">alza</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">solleva (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3284,15 +3323,15 @@ e riparare cose:</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_spingere_e_tirare"><a class="anchor" href="#_spingere_e_tirare"></a>Spingere e Tirare</h3>
+<h3 id="_spingere_tirare_e_sollevare"><a class="anchor" href="#_spingere_tirare_e_sollevare"></a>Spingere, Tirare e Sollevare</h3>
 <div class="paragraph">
-<p>Questo gruppo include i verbi per spingere e tirare oggetti:</p>
-</div>
-<div class="paragraph">
-<p>Verbi di questo gruppo non ancora spostati:</p>
+<p>Questo gruppo include i verbi per spostare oggetti oggetti:</p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p><code>solleva</code></p>
+</li>
 <li>
 <p><code>spingi</code></p>
 </li>
@@ -3303,6 +3342,10 @@ e riparare cose:</p>
 <p><code>tira</code></p>
 </li>
 </ul>
+</div>
+<div class="sect3">
+<h4 id="_solleva"><a class="anchor" href="#_solleva"></a>solleva</h4>
+
 </div>
 <div class="sect3">
 <h4 id="_spingi"><a class="anchor" href="#_spingi"></a>spingi</h4>
@@ -3555,6 +3598,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>balla</code></p>
 </li>
 <li>
+<p><code>bussa</code></p>
+</li>
+<li>
 <p><code>canta</code></p>
 </li>
 <li>
@@ -3600,6 +3646,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>scava</code></p>
 </li>
 <li>
+<p><code>segui</code></p>
+</li>
+<li>
 <p><code>suona</code></p>
 </li>
 <li>
@@ -3628,6 +3677,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_balla"><a class="anchor" href="#_balla"></a>balla</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_bussa"><a class="anchor" href="#_bussa"></a>bussa</h4>
 
 </div>
 <div class="sect3">
@@ -3688,6 +3741,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_scava"><a class="anchor" href="#_scava"></a>scava</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_segui"><a class="anchor" href="#_segui"></a>segui</h4>
 
 </div>
 <div class="sect3">
@@ -3777,32 +3834,11 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>follow</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">follow (act)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>hint</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">hints</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">hint</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>knock (on)</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">knock on (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>lift</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">lift (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>pry</code></p></td>
@@ -4152,6 +4188,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>tuffati_in</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>solleva</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>spingi</code>.</p>
 </li>
 <li>
@@ -4233,6 +4272,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>balla</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>bussa</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>canta</code>.</p>
 </li>
 <li>
@@ -4278,6 +4320,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>scava</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>segui</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>suona</code>.</p>
 </li>
 <li>
@@ -4294,7 +4339,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.34-Alpha<br>
+Versione 0.7.35-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
